<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EdgeFunctionSettingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:text="@string/edge_function_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/edge_label_edge_func"
                android:text="@string/constant_A"
                android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_gravity="center"
                android:textSize="8pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/edge_constant_A"
                android:layout_gravity="center"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_polygon_n" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/num_label_edge_func"
                android:text="@string/constant_B"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/edge_constant_B"
                android:inputType="number"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:hint="@string/hint_points" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/c_label_edge_func"
                android:text="@string/constant_C"
                android:textSize="8pt"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <NumberPicker
                android:id="@+id/edge_constant_C"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_edges_function"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
